--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,14 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# API Keys and sensitive configuration
+.env
+.env.*
+!.env.example
+api_keys.dart
+secrets.properties
+google-services.json
+GoogleService-Info.plist
+**/android/local.properties
+**/android/key.properties
