🎨 Cambiar nombre a Lingo Gym y configurar icono
- Cambiar nombre de app de "dev" a "Lingo Gym"
- Actualizar AndroidManifest.xml con nuevo nombre
- Actualizar Info.plist (iOS) con nuevo nombre
- Añadir flutter_launcher_icons para generación automática de iconos
- Crear directorio assets/icon/ para el icono de la app
- Añadir documentación: CONFIGURACION_ICONO.md, INSTRUCCIONES_LINGO_GYM.md
- Crear RESUMEN_CAMBIOS_LINGO_GYM.md con estado de cambios
- Remover claves de API hardcodeadas (seguridad)
- Añadir placeholders para API keys en archivos nativos

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ google-services.json
 GoogleService-Info.plist
 **/android/local.properties
 **/android/key.properties
+*.local.xml
+*.local.swift
+AndroidManifest.local.xml
+AppDelegate.local.swift
