--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   permission_handler: ^11.0.1
   geolocator: ^10.1.0
+  google_generative_ai: ^0.4.6
 
 dev_dependencies:
   flutter_test:
